Table categories {
  category_id int [pk, increment, note: 'Auto-increment primary key']
  category_name varchar(100) [unique, not null, note: 'Material category (Cuprate, Iron-based, MgB2-type, etc.)']
  
  Note: 'Normalized material categories - eliminates redundancy in materials table'
}

Table families {
  family_id int [pk, increment, note: 'Auto-increment primary key']
  family_name varchar(100) [unique, not null, note: 'Broad material family classification']
  
  Note: 'Normalized material families - separate from categories for flexibility'
}

Table quality_tiers {
  tier_id int [pk, increment, note: 'Auto-increment primary key']
  tier_name varchar(50) [unique, not null, note: 'Data quality tier (tier1_strict, tier2_standard, tier3_inclusive)']
  
  Note: 'Normalized quality tiers with validation rules'
}

Table elements {
  element_symbol varchar(3) [pk, note: 'Chemical element symbol (H, He, Li, etc.)']
  atomic_number int [note: 'Atomic number (1-118)']
  
  Note: 'Reference table for all chemical elements in the periodic table'
}


Table materials {
  data_number int [pk, note: 'Unique identifier from NIMS database']
  chemical_formula varchar(200) [not null, note: 'Chemical formula (e.g., YBa2Cu3O7)']
  formula_normalized varchar(200) [note: 'Normalized formula for consistency']
  tc_kelvin float [not null, note: 'Critical temperature in Kelvin']
  n_elements int [note: 'Number of elements in composition']
  category_id int [ref: > categories.category_id, note: 'FK to categories table']
  family_id int [ref: > families.family_id, note: 'FK to families table']
  tier_id int [ref: > quality_tiers.tier_id, note: 'FK to quality_tiers table']
  has_oxygen_var boolean [note: 'Formula contains oxygen variability (O7-x notation)']
  is_high_tc boolean [note: 'Tc > 77K (liquid nitrogen temperature)']
  publication_year int [note: 'Year of discovery/publication']
  tc_std float [note: 'Standard deviation of Tc (multiple measurements)']
  n_measurements int [note: 'Number of Tc measurements']
  
  indexes {
    tc_kelvin [name: 'idx_tc_kelvin']
    category_id [name: 'idx_category']
    publication_year [name: 'idx_year']
  }
  
  Note: '''
  Core superconductor materials table (3NF compliant)
  - All non-key attributes depend only on data_number
  - No transitive dependencies (categories/families/tiers normalized)
  - Foreign keys enforce referential integrity
  '''
}


Table materials_elements {
  material_id int [ref: > materials.data_number, note: 'FK to materials table']
  element_symbol varchar(3) [ref: > elements.element_symbol, note: 'FK to elements table']
  
  indexes {
    (material_id, element_symbol) [pk]
    material_id [name: 'idx_material']
    element_symbol [name: 'idx_element']
  }
  
  Note: '''
  Junction table for many-to-many relationship:
  - One material contains many elements
  - One element appears in many materials
  - Composite primary key (material_id, element_symbol)
  '''
}


Table element_stats {
  element_symbol varchar(3) [pk, ref: > elements.element_symbol, note: 'FK to elements table']
  count int [note: 'Number of materials containing this element']
  mean_tc float [note: 'Mean Tc of materials with this element']
  median_tc float [note: 'Median Tc']
  std_tc float [note: 'Standard deviation of Tc']
  min_tc float [note: 'Minimum Tc']
  max_tc float [note: 'Maximum Tc']
  
  Note: '''
  Aggregate statistics by element
  - Derived from materials and materials_elements tables
  - Used for dashboard performance optimization
  - Updated via materialized view or periodic refresh
  '''
}

Table feature_importance {
  feature_name varchar(200) [pk, note: 'Matminer feature name']
  composite_score float [note: 'Composite importance score (F-test + MI + RF)']
  
  Note: '''
  Feature importance rankings for Tc prediction
  - Derived from statistical analysis
  - Top 20 features by composite score
  - Used for feature selection in modeling
  '''
}
